Potentially fixed lists not having proper space between list item and marker on all devices
- Before on desktop, there was an extra space between each list item and the marker
- Should now be standardized using ::marker instead and baking in padding purely with... well padding lol

--- a/src/styles/test.css
+++ b/src/styles/test.css
@@ -117,13 +117,22 @@
 	list-style-position: inside;
 }
 
-.contact-section-list-item{
-	list-style-type: ">";
+/* .contact-section-list-item{
+	list-style-type: "> ";
 }
 
 .skills-section-list-item{
-	list-style-type: "­­­­­­­­­­­­▪­­­­­­­­";
+	list-style-type: "­­­­­­­­­­­­▪­­­­­­­ ­";
+} */
+
+.skills-section-list-item::marker { 
+	content: "▪"; 
 }
+
+.contact-section-list-item::marker { 
+	content: ">"; 
+}  
+
 
 .skills-section-list{
 	display: grid;
@@ -136,6 +145,7 @@
 	color: inherit;
 	text-decoration: none;
 	background: inherit;
+	/* padding: 0.2em -.4em; */
 	padding: 0.2em calc(1ch + 0.4em);
 	margin: -0.2em -0.4em;
 }
@@ -149,23 +159,20 @@
 	text-shadow: var(--colored-shadow-opposite-mode);
 	border-radius: 0;
 	outline: none;
-	/* margin-left: 0;
-	margin-right: 0;
-	padding-left: 2em;
-	padding-right: 2em; */
+	margin: -0.2em calc(-0.55em + 2ch);
 }
 
 
-.contact-section-list-item:has(.contact-section-link:hover),
-.contact-section-list-item:has(.contact-section-link:focus){
-	list-style-type: "<";
+.contact-section-list-item:has(.contact-section-link:hover)::marker,
+.contact-section-list-item:has(.contact-section-link:focus)::marker{
+	content: "<";
 }
 
 .contact-section-list-item:has(.contact-section-link:hover)::after,
 .contact-section-list-item:has(.contact-section-link:focus)::after{
 	content:">";
 	position: absolute;
-	padding-left: 1ch;
+	padding-left: 2ch;
 }
 
 
